--- a/docker/.env
+++ b/docker/.env
@@ -19,15 +19,15 @@ UPDATE_CP_PORT = 8095
 CONTACT_SKOR_PORT = 8096
 
 # HOSTNAME:
-DNS = skor.smu.edu.sg
+DNS = <your_application_dns>
 
 # HTTPS:
-CERT_FILE = fullchain.pem
-KEY_FILE = privkey.pem
+CERT_FILE = <your_cert_file>
+KEY_FILE = <your_key_file>
 LOCAL = False
 
 # DATABASE:
-SQLALCHEMY_DATABASE_URI = mysql+mysqlconnector://skor:skorPassword@172.17.0.1:3306/skor
+SQLALCHEMY_DATABASE_URI = mysql+mysqlconnector://<user>:<password>@172.17.0.1:3306/skor
 SQLALCHEMY_POOL_RECYCLE = 280
 SQLALCHEMY_TRACK_MODIFICATIONS = False
 
