--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,5 @@
 # ATOMIC MICROSERVICES:
 APP_PORT = 443
-TEST_PORT = 8080
 USER_PORT = 8081
 TERM_PORT = 8082
 COURSE_PORT = 8083
@@ -19,11 +18,11 @@ UPDATE_CP_PORT = 8095
 CONTACT_SKOR_PORT = 8096
 
 # HOSTNAME:
-DNS = <your_application_dns>
+DNS = <application_dns>
 
 # HTTPS:
-CERT_FILE = <your_cert_file>
-KEY_FILE = <your_key_file>
+CERT_FILE = <cert_file>
+KEY_FILE = <key_file>
 LOCAL = False
 
 # DATABASE:
